# FlaskDiarization

./: .gitignore  .gitmodules  app.py  docker-compose.yml  pyproject.toml
src/aggregator/: aggregator.py
src/db_service/: db.py  models.py
src/dockerfiles/: Dockerfile_dev  Dockerfile_proxy
src/proxy/: app.py
src/summary_service/: __init__.py  summary_service.py
src/task_manager/: manager.py
src/transcriber_service/: __init__.py  transcriber_service.py
static/css/: styles.css
static/js/: script.js
templates/: 404.html  base.html  index.html  summary.html
