[project]
name = "flaskdiarization"
version = "0.1.0"
description = "Flask application for audio transcription and diarization"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "ctranslate2<4.7.0",
    "faster-whisper>=1.1.1",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "onnxruntime>=1.19",
    "pandas>=2.2.3",
    "pyannote-audio>=3.3.2",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "ollama>=0.4.8",
    "anthropic>=0.51.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
